@@ -7,7 +7,7 @@ COPYRIGHTER = copyrighter -p $(APP) -n $(NOTICE_TEMPLATE) $(COPYRIGHT_OWNER)
 
 GENERATED_FILES = AUTHORS MANIFEST README bl/core/version.py
 
-PROTOBUF_SRC_DIRS := bl/core/messages
+PROTOBUF_SRC_DIRS := bl/core/messages bl/core/gt/messages
 
 
 .PHONY: all build build_proto build_py install install_py install_user install_user_py docs docs_py docs_put docs_view dist clean distclean
