@@ -1,0 +1,11 @@
+"""
+Messages conversion utilities.
+"""
+
+import registry
+
+# the following will automagically register the relevant message codecs
+import MessageStreamHeader
+import Dummy
+
+
